update resume file.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta property="og:title" content="Mohamed A. Benhamida">
     <meta property="og:description" content="Roses are red, violets are blue. I love coffee and coding too.">
     <meta property="og:image" content="assets/malek.png">
-    <meta property="og:url" content="https://bajuju67.github.io">
+    <meta property="og:url" content="https://f94a5d1685cb014.github.io">
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Mohamed A. Benhamida - Personal Website" />
@@ -64,13 +64,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <ul>
                 <li> > (+31) 0644825707</li>
                 <li> > Amsterdam, The Netherlands</li>
-                <li> > <a target="_blank" href="mailto:bajuju67@gmail.com">bajuju67@gmail.com</a></li>
+                <li> > <a target="_blank" href="mailto:mohamed.a.benhamida@gmail.com">mohamed.a.benhamida@gmail.com</a></li>
                 <li> >
-                  <a target="_blank" class="github-link" href="https://github.com/bajuju67">Github</a> |
-                  <a target="_blank" class="linkedin-link" href="https://www.linkedin.com/in/bajuju67">LinkedIn</a> |
-                  <a target="_blank" class="twitter-link" href="https://www.twitter.com/bajuju67">Twitter</a>
+                  <a target="_blank" class="github-link" href="https://github.com/f94a5d1685cb014">Github</a> |
+                  <a target="_blank" class="linkedin-link" href="https://www.linkedin.com/in/26a64cd18856678">LinkedIn</a> |
+                  <a target="_blank" class="twitter-link" href="https://www.twitter.com/87cc454ad14850f">Twitter</a>
                 </li>
-                <li> > <a class="resume-download-link" download="MohamedBenHamidaResume.pdf" href="https://bajuju67.github.io/malekresume.pdf">Download My Resume</a></li>
+                <li> > <a class="resume-download-link" download="mohamed_a_benhamida_resume.pdf" href="https://f94a5d1685cb014.github.io/mohamed_a_benhamida_resume.pdf">Download My Resume</a></li>
             </ul>
         </div>
       </div>
@@ -238,13 +238,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <ul>
               <li> > (+31) 0644825707</li>
               <li> > Amsterdam, The Netherlands</li>
-              <li> > <a target="_blank" href="mailto:bajuju67@gmail.com">mallekbh@gmail.com</a></li>
+              <li> > <a target="_blank" href="mailto:mohamed.a.benhamida@gmail.com">mohamed.a.benhamida@gmail.com</a></li>
               <li> >
-                <a class="github-link" href="https://github.com/bajuju67">Github</a> |
-                <a target="_blank" class="linkedin-link" href="https://www.linkedin.com/in/bajuju67">LinkedIn</a> |
-                <a target="_blank" class="twitter-link" href="https://www.twitter.com/bajuju67">Twitter</a>
+                <a class="github-link" href="https://github.com/f94a5d1685cb014">Github</a> |
+                <a target="_blank" class="linkedin-link" href="https://www.linkedin.com/in/26a64cd18856678">LinkedIn</a> |
+                <a target="_blank" class="twitter-link" href="https://www.twitter.com/87cc454ad14850f">Twitter</a>
               </li>
-              <li> > <a id="resume-download-link" download="MohamedBenHamidaResume.pdf" href="https://bajuju67.github.io/malekresume.pdf">Download My Resume</a></li>
+              <li> > <a id="resume-download-link" download="mohamed_a_benhamida.pdf" href="https://f94a5d1685cb014.github.io/mohamed_a_benhamida.pdf">Download My Resume</a></li>
             </ul>
           </div>
           <div class="section" id="skills">
