--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="description" content="Software Engineer & Scrum Master"/>
     <meta name="keywords" content="mohamed amine benhamda, mohamed amine, malek ben hamida, algeria, emploitic, jobboard, scrum master, scrum, agile, php, symfony, software engineer, software craftsmen, coffee, code, algiers, hivedigit, openminds, openmindsclub, hive-digit, emploitic, emploitic.com, usthb, portfolio, web development, arabic nlp">
     <meta name="copyright" content="Mohamed A. Benhamida">
-    <meta name="author" content="Mohamed A. Benhamida, mallekbh@gmail.com">
-    <meta name="url" content="https://bajuju67.github.io">
+    <meta name="author" content="Mohamed A. Benhamida, mohamed.a.benhamida@gmail.com">
     <meta name="revised" content="Saturday, July 18th, 2020, 15:00" />
     <meta property="og:title" content="Mohamed A. Benhamida">
     <meta property="og:description" content="Roses are red, violets are blue. I love coffee and coding too.">
     <meta property="og:image" content="assets/malek.png">
-    <meta property="og:url" content="https://f94a5d1685cb014.github.io">
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Mohamed A. Benhamida - Personal Website" />
