correct profile picture.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="revised" content="Saturday, July 18th, 2020, 15:00" />
     <meta property="og:title" content="Mohamed A. Benhamida">
     <meta property="og:description" content="Roses are red, violets are blue. I love coffee and coding too.">
-    <meta property="og:image" content="assets/malek-alt.png">
+    <meta property="og:image" content="assets/malek-alt.jpg">
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Mohamed A. Benhamida - Personal Website" />
-    <meta property="twitter:image" content="assets/malek-alt.png">
+    <meta property="twitter:image" content="assets/malek-alt.jpg">
     <meta property="twitter:title" content="Mohamed A. Benhamida">
     <meta property="twitter:description" content="Roses are red, violets are blue. I love coffee and coding too.">
     <meta property="twitter:card" content="summary_large_image">
